--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -9,7 +9,15 @@
 	"compatibility_date": "2026-01-03",
 	"observability": {
 		"enabled": true
-	}
+	},
+	"d1_databases": [
+		{
+			"binding": "phikap_db",
+			"database_name": "phikap-db",
+			"database_id": "804dcaf1-9301-48ec-b806-08f11044bf3a",
+			"remote": true
+		}
+	]
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
