event_duty time restructuring

--- a/backend/wrangler.jsonc
+++ b/backend/wrangler.jsonc
@@ -14,8 +14,7 @@
 		{
 			"binding": "phikap_db",
 			"database_name": "phikap-db",
-			"database_id": "c23f932d-ebaa-47ea-8feb-9739c073b70a",
-			"remote": true
+			"database_id": "6c700fcc-6b5d-47b1-af9a-48c95ea6b9d0"
 		}
 	]
 	/**
