--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-VITE_API_BASE_URL=https://backend.eahtree.workers.dev
+# VITE_API_BASE_URL=https://backend.eahtree.workers.dev
+VITE_API_BASE_URL=http://localhost:8787
